force-app/main/default/objects/Partnership__c/Partnership__c.object-meta.xml
<CustomObject>
    <label>Partnership</label>
    <nameField>
        <displayFormat>PS-{000000000}</displayFormat>
        <label>Partnership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>