force-app/main/default/objects/Partnership__c/fields/ExtrasTotal__c.field-meta.xml
<CustomField>
    <fullName>ExtrasTotal__c</fullName>
    <label>Extras Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>