force-app/main/default/objects/Partnership__c/fields/Inning__c.field-meta.xml
<CustomField>
    <fullName>Inning__c</fullName>
    <label>Inning</label>
    <referenceTo>Inning__c</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>