force-app/main/default/objects/Partnership__c/fields/Player1__c.field-meta.xml
<CustomField>
    <fullName>Player1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player 1</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>