force-app/main/default/objects/Partnership__c/fields/Player2__c.field-meta.xml
<CustomField>
    <fullName>Player2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player 2</label>
    <referenceTo>GamePlayer__c</referenceTo>
    <relationshipLabel>Partnerships (Player 2)</relationshipLabel>
    <relationshipName>Partnerships1</relationshipName>
    <type>Lookup</type>
</CustomField>