force-app/main/default/objects/Partnership__c/fields/RunsByPlayer1__c.field-meta.xml
<CustomField>
    <fullName>RunsByPlayer1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Runs By Player 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>