force-app/main/default/objects/Partnership__c/fields/RunsByPlayer2__c.field-meta.xml
<CustomField>
    <fullName>RunsByPlayer2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Runs By Player 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>