force-app/main/default/objects/Partnership__c/fields/TotalRuns__c.field-meta.xml
<CustomField>
    <fullName>TotalRuns__c</fullName>
    <formula>RunsByPlayer1__c  +  RunsByPlayer2__c  + ExtrasTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Runs</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>